[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sqlalchemy-filterset"
version = "0.1.0"
description = ""
authors = ["Arseny Sysolyatin <as@idaproject.com>", "Ivan Moiseev <imoiseev.work@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0.0"
SQLAlchemy = { version = ">=1.4,<2", extras = ["asyncio", "mypy"] }

[tool.poetry.dev-dependencies]
commitizen = "^2.20.5"
asyncpg = ">=0.26.0"

# Typehinting
mypy = ">=0.940"
mypy-extensions = ">=0.4.3"

# Tests
pytest = ">=7.0.1"
pytest-asyncio = ">=0.18.1"
pytest-async-sqlalchemy = ">=0.2.0"
pytest-cov = "^3.0.0"
factory-boy = ">=3.2.1"

# Formatting
black = "~22.8.0"
isort = "~5.10.1"

# Stubs
sqlalchemy2-stubs = ">=0.0.2-alpha.25"
pytest-dotenv = "^0.5.2"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "sqlalchemy_filterset/__init__.py",
    "pyproject.toml:version"
]

[tool.black]
line-length = 100

[tool.isort]
multi_line_output = 3
line_length = 100
include_trailing_comma = true

[tool.mypy]
allow_redefinition = false
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_any_explicit = false
disallow_any_generics = false
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_errors = false
ignore_missing_imports = false
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true

plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
asyncio_mode = "auto"
